# wquantiles

./: .gitignore  .travis.yml  CHANGES.md  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  weighted.py
.github/workflows/: codeql-analysis.yml
docs/: Makefile  conf.py  index.rst  make.bat  weighted.rst
test/: test_weighted.py
