[tool.poetry]
name = "wquantiles"
version = "0.6"
description = "Weighted quantiles, including weighted median, based on numpy"
repository = "http://github.com/nudomarinero/wquantiles/"
authors = ["Jose Sabater <jsm@jsabater.info>"]
license = "MIT"
classifiers = [
        'Programming Language :: Python',
        'Development Status :: 4 - Beta',
        'Natural Language :: English',
        'Environment :: Web Environment',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
        'Topic :: Scientific/Engineering :: Mathematics',
        'Topic :: Software Development :: Libraries :: Python Modules',
]
packages = [
    { include = "wquantiles.py" },
    { include = "weighted.py" },
]

[tool.poetry.dependencies]
python = ">=3.6"
numpy = ">=1.18"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
