[metadata]
name = wquantiles
version = 0.6
description = Weighted quantiles, including weighted median, based on numpy
long_description = file: README.md
url = http://github.com/nudomarinero/wquantiles/
author = Jose Sabater
author_email = jsm@jsabater.info
license = MIT License
platforms = any
classifiers =
    Programming Language :: Python
    Development Status :: 4 - Beta
    Natural Language :: English
    Environment :: Web Environment
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
py_modules =
    weighted
    wquantiles